# codebook

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: claude.rs  db.rs  git.rs  lib.rs  main.rs  remote.rs
apps/desktop/src-tauri/src/hub/: auth.rs  mod.rs  protocol.rs  router.rs
apps/desktop/src/components/layout/: CenterPanel.tsx  LeftPanel.tsx  RemoteConnectPopup.tsx  RemotePanel.tsx  RightPanel.tsx  TopHeader.tsx
apps/desktop/src/components/settings/: SettingsPanel.tsx
apps/desktop/src/lib/: api.ts  theme.ts
apps/desktop/src/stores/: useAppStore.ts
apps/desktop/src/types/: index.ts
apps/mobile/: index.html  package.json
apps/mobile/src/: App.tsx  index.css
apps/mobile/src/components/: ChatScreen.tsx  ConnectScreen.tsx
apps/mobile/src/hooks/: useWebSocket.ts
