[package]
name = "codebook"
version = "0.1.0"
description = "CodeBook - AI CLI Manager"
authors = ["daxiongya"]
edition = "2021"

[lib]
name = "codebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"
rand = "0.9"
base64 = "0.22"
